--- a/data/main-window.in.ui
+++ b/data/main-window.in.ui
@@ -1003,7 +1003,9 @@
                             <property name="orientation">vertical</property>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+/
                             <property name="position">1</property>
                           </packing>
                         </child>
@@ -1067,7 +1069,9 @@
                             <property name="orientation">vertical</property>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+/
                             <property name="position">5</property>
                           </packing>
                         </child>
@@ -1095,7 +1099,9 @@
                             <property name="orientation">vertical</property>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+/
                             <property name="position">7</property>
                           </packing>
                         </child>
